overlay/dev/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend-dep
  namespace: demo-app
spec:
  replicas: 1
