overlay/dev/backend-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: Demo-app
spec:
  type: LoadBalancer
