overlay/dev/frontend-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: demo-app
spec:
  type: ClusterIP
