overlay/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-ingress-name
spec:
  rules:
    - host: *.dev.aam.localhost
